--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -19,10 +19,12 @@
         <!-- logo -->
         <img src="/static/logo.png" alt="" width="60" height="48" class="d-inline-block align-text-top">
       </a>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -37,11 +39,19 @@
       </div>
     </div>
   </nav>
+
+
+
+  
   <!--Navbar-->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
 
 </head>
 
-<body>
+<body style="font-family: 'Rubik', sans-serif;">
   <!--Bootstrap JS-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -58,9 +68,9 @@
     <h3 style="text-align: center; padding-bottom:10px;">Restaurants</h3>
     {% for data in restaurant_rating_data %}
     <div class="col-sm-4" style="padding-bottom: 20px;">
-      <div class="card">
+      <div class="card " style="">
         <img src="/static/restaurant/{{data.restaurant.image_name}}"
-          style="width: 100%; object-fit: cover; border-radius:5px;" class="card-img-top" alt="...">
+        style="height: 200px; object-fit: cover; border-bottom" class="card-img-top " alt="...">
         <div class="card-body">
           <h5 class="card-title">{{data.restaurant.name}}</h5>
           <!-- <p class="card-text"> Average Rating: {{ data.avg_rating }}</p> -->
@@ -99,7 +109,7 @@
             <i style="color: gold" class="fa fa-star"></i>
             {% endif %}
           </p>
-          <a href="/loading/restaurant/?id={{data.restaurant.name}}" class="btn btn-primary">Menu</a>
+          <a href="/loading/restaurant/?id={{data.restaurant.name}}" class="btn btn-outline-danger" style=" border-color: red; hover-color: white;">Menu</a>
         </div>
       </div>
     </div>
