--- a/restaurants/templates/loading.html
+++ b/restaurants/templates/loading.html
@@ -1,4 +1,8 @@
 <head>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
 <style>
 body {
   background-color: rgb(0, 0, 0);
@@ -12,6 +16,8 @@ body {
   top: 0;
 }
 
+
+
 #loading-text {
   display: block;
   position: absolute;
@@ -22,7 +28,7 @@ body {
   height: 30px;
   margin: -7px 0 0 -45px;
   text-align: center;
-  font-family: 'PT Sans Narrow', sans-serif;
+  font-family: 'Rubik', sans-serif;";
   font-size: 20px;
 }
 
@@ -34,13 +40,13 @@ body {
   width: 170px;
   height: 170px;
   margin: -85px 0 0 -85px;
-  border: 3px solid #F00;
+  border: 3px solid #e8da44;
 }
 
 #loading-content:after {
   content: "";
   position: absolute;
-  border: 3px solid #0F0;
+  border: 3px solid #e8da44;
   left: 15px;
   right: 15px;
   top: 15px;
@@ -50,7 +56,7 @@ body {
 #loading-content:before {
   content: "";
   position: absolute;
-  border: 3px solid #00F;
+  border: 3px solid #e8da44;
   left: 5px;
   right: 5px;
   top: 5px;
@@ -59,8 +65,8 @@ body {
 
 #loading-content {
   border: 3px solid transparent;
-  border-top-color: #4D658D;
-  border-bottom-color: #4D658D;
+  border-top-color: #e8da44;
+  border-bottom-color: #e8da44;
   border-radius: 50%;
   -webkit-animation: loader 2s linear infinite;
   -moz-animation: loader 2s linear infinite;
@@ -70,8 +76,8 @@ body {
 
 #loading-content:before {
   border: 3px solid transparent;
-  border-top-color: #D4CC6A;
-  border-bottom-color: #D4CC6A;
+  border-top-color: #e8da44;
+  border-bottom-color: #e8da44;
   border-radius: 50%;
   -webkit-animation: loader 3s linear infinite;
     -moz-animation: loader 2s linear infinite;
@@ -81,8 +87,8 @@ body {
 
 #loading-content:after {
   border: 3px solid transparent;
-  border-top-color: #84417C;
-  border-bottom-color: #84417C;
+  border-top-color: #e8da44;
+  border-bottom-color: #e8da44;
   border-radius: 50%;
   -webkit-animation: loader 1.5s linear infinite;
   animation: loader 1.5s linear infinite;
@@ -117,7 +123,7 @@ body {
 }
 
 #content-wrapper {
-  color: #FFF;
+  color: #e8da44;
   position: fixed;
   left: 0;
   top: 20px;
@@ -131,7 +137,7 @@ body {
   margin: 0 auto;
   text-align: center;
   height: 100px;
-  background-color: #666;
+  background-color: #e8da44;
 }
 
 #content
@@ -140,7 +146,7 @@ body {
   height: 1000px;
   margin: 0 auto;
   text-align: center;
-  background-color: #888;
+  background-color: #e8da44;
 }
 
 </style>
@@ -149,7 +155,7 @@ body {
     function redirect() {
     window.location.replace("{% url 'restaurant' %}?{{ request.GET.urlencode }}");
     }
-    setTimeout(redirect, 3000); // 3 seconds
+    setTimeout(redirect, 700); 
   </script>
 </head>
 
