--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -21,6 +21,10 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
   <!--Bootstrap JS-->
 
   <!--Navbar-->
@@ -150,8 +154,9 @@
         <div class="col-sm-3" style="padding-bottom: 10px;">
           <div class="card">
             <div class="card-body">
-              <a style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                <h5 style = "color: black; text-decoration: underline;" class="card-title hover-underline-animation">Ratings:</h5>
+              <a style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#exampleModalToggle">
+                <h5 style="color: black; text-decoration: underline;" class="card-title hover-underline-animation">
+                  Ratings:</h5>
               </a>
               <h5 style="color:black" class="card-text">
                 {%if rating is None%}
@@ -258,8 +263,8 @@
       <h2>All Items:</h2>
       <hr>
       {% for category in categories%}
-        <h2>{{category}}</h2>
-        <hr>
+      <h2>{{category}}</h2>
+      <hr>
       {% for item in menu %}
       {%if item.type in category%}
       <div class="col-sm-4" style="padding-bottom: 20px;">
@@ -295,7 +300,7 @@
               </button>
               {% endif %}
               {% endfor %}
-               <!-- Like Button -->
+              <!-- Like Button -->
             </form>
           </div>
         </div>
@@ -308,43 +313,152 @@
   <!--Cards-->
 
   <!-- Button trigger modal -->
+</body>
 
-  <!-- Modal -->
-  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <div class="col-sm-12" style="padding-bottom: 20px;">
-            <div class="card">
-              <img src="/static/fooditem/{{item.image_name}}" style="height: 300px; object-fit: cover;" class="card-img-top"
-                alt="...">
+<!-- Modal -->
+<div class="modal fade" id="exampleModalToggle" aria-labelledby="exampleModalToggleLabel" tabindex="-1"
+  style="display: none;" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Reviews</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
 
-              <div class="card-body">
-                <h5 class="card-title">{{item.name}}</h5>
-                {% if item.uber_price < item.doordash_price %} <p style="color:red;" class="card-text">Doordash Price:
-                  {{item.doordash_price}}</p>
-                  <p style="color:green;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
-                  {% else %}
-                  <p style="color:green;" class="card-text">Doordash Price: {{item.doordash_price}}</p>
-                  <p style="color:red;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
-                  {% endif %}
+      <div class="modal-body">
+        <div class="card text-center">
+          <h5 class="card-header">Overview</h5>
+          <div class="card-body">
+            {% for c in distributions %}
+            <div style="display: flex; align-items: center; justify-content: center; margin-bottom: 10px;">
+              <div style="width: 100px; text-align: right; margin-right: 10px;">{{c.rating}} <i style="color: gold" class="fa fa-star"></i></div>
+              <div class="progress" style="width: 50%; flex-grow: 1;">
+                  <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="{{ c.distribution }}"
+                      aria-valuemin="0" aria-valuemax="100" style="width: {{ c.distribution }}%;">
+                  </div>
               </div>
-            </div>
+          </div>
+            <br>
+            {% endfor %}
+            <h5 class="card-title">
+              {%if rating is None%}
+              No Reviews
+              {% elif rating is 1%}
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              {% elif rating is 2%}
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              {% elif rating is 3%}
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              {% elif rating is 4%}
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              {% elif rating is 5%}
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              {% endif %}
+            </h5>
+            <p class="card-text">This restaurant has an average rating of {{rating}}.0</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Understood</button>
+
+        <br>
+        {% for review in reviews%}
+        <div class="card">
+          <div class="card-header">
+            {{review.reviewer}}
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">
+              {%if rating is None%}
+              No Reviews
+              {% elif review.rating is 1%}
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              {% elif review.rating is 2%}
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              {% elif review.rating is 3%}
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              {% elif review.rating is 4%}
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: #999" class="fa fa-star"></i>
+              {% elif review.rating is 5%}
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              <i style="color: gold" class="fa fa-star"></i>
+              {% endif %}
+            </h5>
+            <p class="card-text">{{review.review}}</p>
+          </div>
+          <div class="card-footer text-muted">
+            {{review.created_at}}
+          </div>
         </div>
+        <br>
+        {% endfor %}
+
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-dismiss="modal" data-bs-target="#exampleModalToggle2"
+          data-bs-toggle="modal">Open second modal</button>
       </div>
     </div>
   </div>
+</div>
 
-</body>
+<div class="modal fade" id="exampleModalToggle2" aria-labelledby="exampleModalToggleLabel2" tabindex="-1"
+  style="display: none;" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Write Your Review</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Hide this modal and show the first with the button below.
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-dismiss="modal" data-bs-target="#exampleModalToggle"
+          data-bs-toggle="modal">Back to first</button>
+      </div>
+    </div>
+  </div>
+</div>
+<button class="btn btn-primary" data-dismiss="modal" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Open
+  first modal</button>
 
 </html>
