--- a/restaurants/templates/owner-dashboard.html
+++ b/restaurants/templates/owner-dashboard.html
@@ -308,7 +308,57 @@
     {%endfor%}
   </div>
 
-
+  <div class="row" style="padding: 50px">
+    <h3 style="text-align: center; padding-bottom:10px;">Your Competition</h3>
+    {% for data in competition %}
+    <div class="col-sm-4" style="padding-bottom: 20px;">
+      <div class="card">
+        <img src="/static/restaurant/{{data.restaurant.image_name}}"
+        style="height: 300px; object-fit: cover;" class="card-img-top " alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{data.restaurant.name}}</h5>
+          <!-- <p class="card-text"> Average Rating: {{ data.avg_rating }}</p> -->
+          <p class="card-text">
+            {%if data.avg_rating is None%}
+              No Reviews
+            {% elif data.avg_rating is 1%}
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            {% elif data.avg_rating is 2%}
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            {% elif data.avg_rating is 3%}
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            {% elif data.avg_rating is 4%}
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: #999" class="fa fa-star"></i>
+            {% elif data.avg_rating is 5%}
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            <i style="color: gold" class="fa fa-star"></i>
+            {% endif %}
+          </p>
+          <a href="/loading/restaurant/?id={{data.restaurant.name}}" class="btn btn-outline-danger" style=" border-color: red; hover-color: white;">Menu</a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
 </body>
 
 {% for data in restaurant_rating_data %}
